--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "nodemon": "^1.19.1"
   }
 }
